--- a/resources.html
+++ b/resources.html
@@ -48,7 +48,7 @@
                             <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/WhatsApp%20Image%202025-10-19%20at%2008.55.21-BW3B4kPo97QkpHfhMljq6OJMwqgPSE.jpeg" alt="Siti Fadilah Djafer">
                         </div>
                         <div class="team-card-content">
-                            <h3>Siti Fadilah Djafer</h3>
+                            <h3>Siti Fadilah Djafar</h3>
                             <p class="team-role">Pendiri & Pengembang NutriQuest</p>
                             
                             <!-- Added interactive animated symbols -->
@@ -79,7 +79,7 @@
 
             <!-- Combined International and Local Organizations into one section -->
             <div class="resources-section">
-                <h2>Organisasi Mitra Kami</h2>
+                <h2>Organisasi Mitra</h2>
                 <p class="section-subtitle">Organisasi Internasional dan Lokal yang Mendukung Ketahanan Pangan</p>
                 <!-- Single horizontal scrollable container for all organizations -->
                 <div class="resources-scroll-container">
